# OOP_Labs

1_Lab/: CMakeLists.txt
1_Lab/src/: hamming_weight.cpp
2_Lab/: CMakeLists.txt
2_Lab/include/: Hex.hpp
2_Lab/src/: Hex.cpp  main.cpp  tests.cpp
3_Lab/: CMakeLists.txt
3_Lab/include/Containers/: FigureVector.hpp
3_Lab/include/Figures/: Square.hpp
3_Lab/src/: main.cpp
3_Lab/src/Figures/: Square.cpp
3_Lab/src/tests/: squareTests.hpp  tests.cpp
4_Lab/include/Figures/: Square.hpp
4_Lab/src/: main.cpp
4_Lab/src/tests/: squareTests.hpp
5_Lab/: CMakeLists.txt
5_Lab/include/: Allocator.hpp  Iterator.hpp  Stack.hpp
5_Lab/src/: main.cpp
5_Lab/src/tests/: stackTests.hpp  tests.cpp
6_Lab/: CMakeLists.txt  run.cpp
6_Lab/game_data/: npc.txt
6_Lab/include/factory/: NPCFactory.hpp
6_Lab/include/mobs/: Dragon.hpp  Elf.hpp  Knight.hpp  NPC.hpp
6_Lab/include/observers/: ConsoleObserver.hpp  LogObserver.hpp
6_Lab/src/factory/: NPCFactory.cpp
6_Lab/src/mobs/: Dragon.cpp  Elf.cpp  Knight.cpp  NPC.cpp
6_Lab/src/observers/: ConsoleObserver.cpp  LogObserver.cpp
6_Lab/tests/: game_tests.cpp
7_Lab/: run.cpp
7_Lab/game_data/: npc.txt
7_Lab/include/factory/: NPCFactory.hpp
7_Lab/include/fight/: fight.hpp
7_Lab/include/mobs/: Dragon.hpp  Elf.hpp  Knight.hpp  NPC.hpp
7_Lab/include/observers/: ConsoleObserver.hpp  LogObserver.hpp
7_Lab/tests/: game_tests.cpp
lab1/src/: main.cpp
lab1/tests/: test.cpp
lab5k/: CMakeLists.txt
lab5k/include/: allocator.hpp  stack.hpp  vector.hpp
lab5k/src/: allocator.cpp
lab5k/tests/: tests.cpp
(+8 files in other folders)
